--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,81 @@
     width: 90%;
     height: 90%;
     background: #FAFAFA 0% 0% no-repeat padding-box;
-    border-radius: 37px;
+    border-radius: 36px;
     opacity: 1;
+}
+
+.left-column-container {
+    height: 100%;
+    margin: 60px 0px 0px 24px;
+}
+
+.icon {
+    display: block;
+    margin: 0 auto;
+}
+
+.company-name {
+    text-align: center;
+    font-family: 'Nunito', sans-serif;
+    font-weight: 600;
+    font-size: 20px;
+    letter-spacing: 0.5px;
+    color: black;
+}
+
+#side-nav-bar {
+    margin-left: 20px;
+    margin-top: 80px;
+}
+
+#side-nav-bar ul{
+    margin: 0;
+    padding: 0;
+}
+
+#side-nav-bar li{
+    list-style: none;
+    padding-left: 64px;
+    margin-top: 48px;
+    font-family: 'Nunito', sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    color: #707070;
+}
+
+.nav-icon-01 {
+    background-image: url("images/navbar_icons/01-dashboard-icon.png");
+    background-repeat: no-repeat;
+    background-size: 24px 24px;
+}
+
+.nav-icon-02 {
+    background-image: url("images/navbar_icons/02-issues-icon.png");
+    background-repeat: no-repeat;
+    background-size: 24px 24px;
+}
+
+.nav-icon-03 {
+    background-image: url("images/navbar_icons/03-resources-icon.png");
+    background-repeat: no-repeat;
+    background-size: 24px 24px;
+}
+
+.nav-icon-04 {
+    background-image: url("images/navbar_icons/04-learning-planning-icon.png");
+    background-repeat: no-repeat;
+    background-size: 24px 24px;
+}
+
+.nav-icon-05 {
+    background-image: url("images/navbar_icons/05-chat-icon.png");
+    background-repeat: no-repeat;
+    background-size: 24px 24px;
+}
+
+.nav-icon-06 {
+    background-image: url("images/navbar_icons/06-settings-icon.png");
+    background-repeat: no-repeat;
+    background-size: 24px 24px;
 }
