--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,6 @@
     height: 90%;
     background: #FAFAFA 0% 0% no-repeat padding-box;
     border-radius: 36px;
-    opacity: 1;
-}
-
-.left-column-container {
-    margin: 60px 0px 0px 24px;
 }
 
 .icon {
@@ -24,16 +19,12 @@
     margin: 0 auto;
 }
 
-.company-name {
+.company-font {
     font-family: 'Nunito', sans-serif;
     font-weight: 600;
     font-size: 20px;
     letter-spacing: 0.5px;
     color: black;
-}
-
-#side-nav-bar {
-    margin-top: 80px;
 }
 
 #side-nav-bar ul{
@@ -44,11 +35,10 @@
 }
 
 #side-nav-bar li{
-    list-style: none;
-    margin-top: 48px;
+    margin-top: 40px;
     font-family: 'Nunito', sans-serif;
-    font-size: 20px;
     font-weight: 600;
+    font-size: 20px;
     color: #707070;
 }
 
@@ -63,17 +53,36 @@
     white-space: nowrap;
 }
 
+.company-font-padding {
+    margin-left: -32px;
+}
+
 @media only screen and (max-width: 991px) {
+    .icon {
+        display: none;
+    }
+
+    .text-display {
+        display: none;
+    }
+    
     .left-column-container {
-        margin: 16px 0 16px 0;
+        margin-bottom: 24px;
     }
 
     #side-nav-bar img{
-        margin-left: 20%;
+        margin-left: 30%;
     }
 }
 
 @media only screen and (min-width: 992px) {
+    .left-column-container {
+        margin: 60px 0px 0px 24px;
+    }
+    #side-nav-bar {
+        margin-top: 60px;
+    }
+
     .navbar-hide {
         display: none;
     }
