--- a/stylesMiddle.css
+++ b/stylesMiddle.css
@@ -30,12 +30,64 @@
     text-align: center;
 }
 
+.welcome-back-container {
+    height: 188px;
+    width: 100%;
+    background: #F7EBFF;
+    border-radius: 20px;
+    margin-top: 31px;
+}
+
+.last-login-container {
+    width: 50%;
+    text-align: center;
+}
+
+.welcome-back-font {
+    font-family: 'Nunito', sans-serif;
+    font-weight: 800;
+    font-size: 25px;
+    color: black;
+}
+
+.last-class-font {
+    font-family: 'Nunito', sans-serif;
+    font-weight: 600;
+    font-size: 15px;
+    color: #707070;
+}
+
+.progress-bar-container {
+    height: 10px;
+    background: white;
+    border-radius: 10px;
+    margin: 0px 28px 0 28px;
+}
+
+#lastClassProgressBar {
+    height: 100%;
+    background-color: #BD63FF;
+}
+
+.percentage-font {
+    font-family: 'Nunito', sans-serif;
+    font-weight: 600;
+    font-size: 12px;
+    color: #707070;
+}
+
+.hero-container {
+    width: 50%;
+    text-align: center;
+    position: absolute;
+    margin-top: -31px;
+}
+
 @media only screen and (max-width: 991px) {
     .middle-column-container {
         margin: 16px 16px 0 16px;
     }
 }
-
 
 @media only screen and (min-width: 992px) {
     .middle-column-container {
