Added broken chart that does not work

--- a/stylesMiddle.css
+++ b/stylesMiddle.css
@@ -152,7 +152,9 @@
     color: #707070;
 }
 
-
+.chart-container {
+    height: 100%;
+}
 
 @media only screen and (max-width: 991px) {
     .middle-column-container {
