--- a/stylesRight.css
+++ b/stylesRight.css
@@ -29,6 +29,34 @@
     margin-top: -18px;
 }
 
+.topics-completion-container {
+    margin: 32px 16px 0 16px;
+}
+
+.topic-title {
+    font-family: 'Nunito', sans-serif;
+    font-weight: 600;
+    font-size: 13px;
+    color: black;
+    margin: 48px 0 8px 0;
+}
+
+.topic-level {
+    font-family: 'Nunito', sans-serif;
+    font-weight: 600;
+    font-size: 10px;
+    color: #707070;
+    margin: 0;
+}
+
+.completion-font {
+    font-family: 'Nunito', sans-serif;
+    font-weight: 600;
+    font-size: 10px;
+    color: #707070;
+    margin: 0 0 20px 0;
+}
+
 @media only screen and (max-width: 991px) {
     .right-column-container {
         margin: 16px 16px 0 16px;
