--- a/styles/stylesMiddle.css
+++ b/styles/stylesMiddle.css
@@ -154,7 +154,9 @@
 }
 
 .chart-container {
-    height: 100%;
+    max-height: 350px;
+    height: 84%;
+    margin-top: 10%;
 }
 
 @media only screen and (max-width: 991px) {
