--- a/styles/stylesRight.css
+++ b/styles/stylesRight.css
@@ -73,6 +73,6 @@
 
 @media only screen and (min-width: 992px) {
     .right-column-container {
-        margin-top: 60px;
+        margin: 60px 16px 0 16px;
     }
 }
