--- a/styles/stylesRight.css
+++ b/styles/stylesRight.css
@@ -60,18 +60,18 @@
 @media only screen and (max-width: 1199px) {
     .right-column-outer {
         height: 100%;
-        width: 100%;
         position: absolute;
         top: 0;
         bottom: 0;
         overflow: hidden;
+        width: 0px;
+        left: 100%;
+        transform: translateX(-100%);
         width: 0;
         transition: width 1s;
     }
 
     .right-column-container {
-        left: 100%;
-        transform: translateX(-100%);
         height: 100%;
         width: 280px;
         position: absolute;
@@ -106,7 +106,11 @@
 }
 
 @media only screen and (min-width: 1200px) {
+    .right-column-outer {
+        width: 0px;
+    }
+
     .right-column-container {
-        margin: 60px 16px 0 16px;
+        margin: 60px 0px 0 0px;
     }
 }
