--- a/static/css/main.css
+++ b/static/css/main.css
@@ -33,12 +33,14 @@ h1 {
     color: white;
     font: 'Nunito';
     font-weight: 600;
+    animation-delay: 1s;
 }
 h2 {
     font-size: 68px;
     color: white;
     font: 'Nunito';
     font-weight: 200;
+    animation-delay: 0.9s;
 }
 
 a {
@@ -69,6 +71,8 @@ p {
     padding: 0.5em;
     text-align: center;
     display: inline-block;
+    margin-top: 20px;
+    animation-delay: 1.5s;
 }
 
 .btnLarge p, .btnLarge p:hover{
@@ -82,7 +86,8 @@ p {
     right: 0;
     top: 0;
     margin-top: 120px;
-    margin-right: 50px;
+    margin-right: 100px;
+    animation-delay: 2s;
 }
 
 .maintainRatio {
