Organized main.css file

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,4 +1,4 @@
-/* Global styling */
+/* Global styling ----------------------------------------------------------------------------------------------------------*/
 * {
     margin: 0;
     border: 0;
@@ -101,7 +101,7 @@ p {
     max-height: 2000px;
 }
 
-/* Navigation */
+/* Navigation ----------------------------------------------------------------------------------------------------------*/
 .mobile {
     display: none;
 }
@@ -156,7 +156,7 @@ nav a:not(:first-child) {
 
 
 
-/* Landing */
+/* Landing ----------------------------------------------------------------------------------------------------------*/
 .landing {
     margin-top: 15em;
     width: 750px;
