--- a/styles/stylesMiddle.css
+++ b/styles/stylesMiddle.css
@@ -173,6 +173,12 @@
     }
 }
 
+@media only screen and (max-width: 672px) {
+    .hero-container {
+        display: none;
+    }
+}
+
 @media only screen and (min-width: 1200px) {
     .middle-column-container {
         margin-top: 60px;
