--- a/styles/stylesMiddle.css
+++ b/styles/stylesMiddle.css
@@ -1,34 +1,35 @@
 .header-container {
-    display: table;
-    width: 100%;
     height: 52px;
-}
-
-.header-container span {
-    display: table-cell;
-    vertical-align: middle;
 }
 
 .dashboard-font {
     font-family: 'Nunito', sans-serif;
     font-weight: 800;
     font-size: 20px;
-    color: black;
+    color: #000000;
 }
 
 .date-font {
     font-family: 'Nunito', sans-serif;
-    font-weight: 800;
+    font-weight: 700;
     font-size: 15px;
     color: #707070;
+    text-align: center;
 }
 
 .search-container {
-    height: 52px;
-    width: 52px;
-    background: #F7EBFF;
+    text-align: right;
+}
+
+.search-icon {
+    background-color: #F7EBFF;
     border-radius: 10px;
-    text-align: center;
+    padding: 16px;
+    transition: 0.3s;
+}
+
+.search-icon:hover {
+    background-color: #e5bfff;
 }
 
 .welcome-back-container {
@@ -53,7 +54,7 @@
 
 .last-class-font {
     font-family: 'Nunito', sans-serif;
-    font-weight: 600;
+    font-weight: 700;
     font-size: 15px;
     color: #707070;
 }
@@ -83,7 +84,7 @@
 
 .percentage-font {
     font-family: 'Nunito', sans-serif;
-    font-weight: 600;
+    font-weight: 700;
     font-size: 12px;
     color: #707070;
 }
@@ -110,17 +111,22 @@
 
 .info-title-font {
     font-family: 'Nunito', sans-serif;
-    font-weight: 600;
+    font-weight: 700;
     font-size: 15px;
     color: black;
 }
 
+.more-classes-container {
+    float: right;
+}
+
 .more-classes-font {
     font-family: 'Nunito', sans-serif;
-    font-weight: 600;
-    font-size: 15px;
+    font-weight: 700;
+    font-size: 13px;
     color: #707070;
     text-align: right;
+    margin-right: 8px;
 }
 
 .class-info {
@@ -129,16 +135,22 @@
     margin-top: 32px;
 }
 
+.unit-code {
+    font-family: 'Nunito', sans-serif;
+    font-weight: 700;
+    font-size: 13px;
+    color: black;
+}
+
 .unit-name {
     font-family: 'Nunito', sans-serif;
-    font-weight: 600;
-    font-size: 15px;
-    color: black;
-    display: table-cell;
-    width: 50%;
+    font-weight: 700;
+    font-size: 13px;
+    color: #707070;
 }
 
 .unit-progress-bar {
+    padding-left: 16px;
     display: table-cell;
     width: 35%;
 }
@@ -148,8 +160,8 @@
     width: 15%;
     text-align: center;
     font-family: 'Nunito', sans-serif;
-    font-weight: 600;
-    font-size: 15px;
+    font-weight: 700;
+    font-size: 13px;
     color: #707070;
 }
 
@@ -169,7 +181,7 @@
         position: absolute;
         height: 100%;
         width: 100%;
-        padding: 24px 16px 0 16px;
+        padding: 16px 16px 0 16px;
     }
 }
 
