--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,44 +19,38 @@ html {
 
 body {
     font-family: 'Montserrat', sans-serif;
-    /* background-image: url(../img/app_preview.png);
-    background-repeat: no-repeat;
-    background-size: 28%;
-    background-position: bottom right; */
     background-color: var(--main-blue);
     height: 100vh;
     width: 100%;
 }
 
-h1 {
-    font-size: 140px;
+.landing h1 {
+    font-size: 60px;
     color: white;
-    font: 'Nunito';
+    font-family: 'Nunito', sans-serif;
     font-weight: 600;
     animation-delay: 1s;
 }
-h2 {
-    font-size: 68px;
+.landing h2 {
+    font-size: 60px;
     color: white;
-    font: 'Nunito';
+    font-family: 'Nunito', sans-serif;
     font-weight: 200;
     animation-delay: 0.9s;
 }
 
-a {
+nav a {
     text-decoration: none;
     font-size: 20px;
     color: white;
-    font-weight: lighter;
+    font-weight: 300;
 }
 
-a:hover {
-    font-weight: 500;
-    color: white;
+nav a:hover {
     text-decoration: none;
 }
 
-p {
+.landing p {
     font-size: 23px;
     color: white;
 }
@@ -66,19 +60,21 @@ p {
     box-shadow: 0px 10px 20px #00000029;
     border-radius: 48px;
     opacity: 1;
-    width: 331px;
-    height: 76px;
+    width: 250px;
+    height: 50px;
     padding: 0.5em;
     text-align: center;
     display: inline-block;
     margin-top: 20px;
     animation-delay: 1.5s;
+    text-decoration: none;
 }
 
 .btnLarge p, .btnLarge p:hover{
     font-weight: 200;
     color: var(--main-blue);
-    padding-top: 1em;
+    font-size: 1em;
+    padding: 1rem;
 }
 
 .appPreview {
@@ -91,8 +87,8 @@ p {
 }
 
 .maintainRatio {
-    max-width: 100%;
-    height: 800px;
+    max-width: 100vw;
+    height: 75vh;
 }
 
 .wrapper {
@@ -122,7 +118,7 @@ nav a:not(:first-child) {
 
 .county-logo, .county-logo:hover {
     float: left;
-    font: 'Nunito';
+    font-family: 'Nunito', sans-serif;
     font-weight: 400;
     font-size: 40px;
     text-shadow: 0px 10px 20px #00000029;
@@ -145,9 +141,10 @@ nav a:not(:first-child) {
 }
 
 #overlay a:first-child {
-    float:right;
-    margin: 50px 5% 0 0;
-    font-size: 25px;
+    position: absolute;
+    right: 0;
+    margin: 20px 5% 0 0;
+    font-size: 35px;
 }
 
 #overlay a:hover {
@@ -156,15 +153,79 @@ nav a:not(:first-child) {
 
 
 
-/* Landing ----------------------------------------------------------------------------------------------------------*/
+/* ----------------------------------------------------- Landing -------------------------------------------------------- */
 .landing {
     margin-top: 15em;
+    margin-left: 5em;
     width: 750px;
 }
 
+/* ---------------------------------------------------- About Section -------------------------------------------------- */
+.triangle-left {
+    width: 0;
+    height: 20px;
+    border-top: 100px solid transparent;
+    border-right: 100vw solid white;
+    border-bottom: 0px solid transparent;
+    margin-top: 18vh;
+}
 
-/* Responsive */
+.about-section {
+    background-color: white;
+    height: 100vh;
+    width: 100vw;
+    margin-top: -1px;
+}
+
+.about-info {
+    width: 90%;
+    height: 50vh;
+    margin: 0 auto;
+    padding-top: 18vh;
+    display: grid;
+    grid-template-columns: auto auto;
+    align-items: center;
+}
+
+.about-img {
+    height: 50vh;
+    width: 450px;
+    padding: 1rem;
+}
+
+.about-info .content {
+    height: 50vh;
+    width: 30vw;
+    padding: 1rem;
+    margin-top: 120px;
+    margin-left: 50px;
+}
+
+.about-info .content h2 {
+    font-weight: 400;
+    color: black;
+    font-size: 40px;
+}
+
+.about-info .content h1 {
+    font-family: 'Nunito', sans-serif;
+    font-weight: 500;
+    color: black;
+    font-size: 65px;
+    margin-top: -20px;
+}
+
+.about-info .content p {
+    font-size: 20px;
+    font-weight: 300;
+}
+
+/* Responsive --------------------------------------------------------------------------------------------------------*/
 @media (max-width:1100px) {
+    body {
+        width: 90vw;
+    }
+
     .desktop {
         display: none;
     }
@@ -172,38 +233,92 @@ nav a:not(:first-child) {
     .mobile {
         display: block;
         margin-top: -5px;
-        margin-right: -50px;
+        margin-right: -100px;
     }
 
     .landing {
         width: 100%;
-        margin-top: 7em;
+        margin-top: 5em;
+        margin-left: 25px;
     }
 
-    h2 {
-        font-size: 25px;
+    .landing h2 {
+        font-size: 26px;
     }
 
-    h1 {
+    .landing h1 {
         font-size: 54px;
-    }
-
-    .maintainRatio {
-        height: 550px;
     }
 
     .county-logo, .county-logo:hover {
         font-size: 25px;
         margin-top: -5px;
+        margin-left: 25px;
     }
 
     .btnLarge {
-        height: 40px;
-        width: 200px;
-        padding-top: 0.2em;
+        height: 50px;
+        width: 225px;
+        padding: 0rem;
     }
 
     .btnLarge p {
         font-size: 15px;
+    }
+
+    .appPreview {
+        margin-right: 40px;
+    }
+
+    .maintainRatio {
+        height: 55vh;
+    }
+
+    .about-info {
+        grid-template-columns: 90%;
+        grid-template-rows: 90% 90%;
+        justify-content: center;
+        padding-top: 0em;
+    }
+
+    .about-img {
+        width: 80%;
+        padding: 2rem;
+    }
+
+    .about-info .content {
+        width: 50vw;
+        margin-top: 0;
+        margin-left: 0;
+        height: 100%;
+        width: 80%;
+        padding: 2rem;
+        margin-top: 10em;
+    }
+
+    .about-info .content h2 {
+        font-size: 30px;
+    }
+
+    .about-info .content h1 {
+        font-size: 40px;
+    }
+
+    .about-info .content p {
+        font-size: 1em;
+    }
+}
+
+@media (max-width: 615px){
+    .appPreview {
+        display: none;
+    }
+
+    .about-info .content {
+        margin-top: 2em;
+    }
+
+    .about-info .content p {
+        font-size: 0.8em;
     }
 }
