--- a/static/css/main.css
+++ b/static/css/main.css
@@ -24,6 +24,32 @@ body {
     width: 100%;
 }
 
+.hide {
+    display: none;
+}
+
+.loader-wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--main-blue);
+    z-index: 2;
+    position: absolute;
+}
+
+.loader{
+    display: inline-block;
+    position: relative;
+    height: 50px;
+    width: 50px;
+  }
+
+.loader svg rect {
+    fill: white;
+}
+
 .landing h1 {
     font-size: 60px;
     color: white;
@@ -123,6 +149,7 @@ nav a:not(:first-child) {
     font-size: 40px;
     text-shadow: 0px 10px 20px #00000029;
     margin-top: -18px;
+    color: white;
 }
 
 #overlay {
