--- a/styles/stylesLeft.css
+++ b/styles/stylesLeft.css
@@ -6,10 +6,9 @@
 
 .dashboard-container {
     position: relative;
-    top: 5%;
-    left: 5%;
-    width: 90%;
-    height: 90%;
+    left: 2.5%;
+    width: 95%;
+    height: 100%;
     background: #FAFAFA 0% 0% no-repeat padding-box;
     border-radius: 36px;
 }
@@ -39,7 +38,7 @@
     text-align: center;
     font-family: 'Nunito', sans-serif;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 18px;
     color: white;
     margin-bottom: 24px;
 }
@@ -51,6 +50,11 @@
 
 .category-icon-container {
     text-align: center;
+}
+
+.category-icon-container img {
+    height: 15px;
+    width: 100%;
 }
 
 .category-text-container {
@@ -65,7 +69,7 @@
 .category-text-container a {
     font-family: 'Nunito', sans-serif;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 15px;
     color: #707070;
     white-space: nowrap;
     transition: .5s;
