--- a/styles/stylesRight.css
+++ b/styles/stylesRight.css
@@ -1,6 +1,6 @@
 .logout-container {
     height: 52px;
-    padding: 0 16px;
+    padding: 60px 16px;
 }
 
 .logout-font {
@@ -37,12 +37,18 @@
     margin: 32px 16px 0 16px;
 }
 
+.topic-info-container {
+    box-shadow: 0px 0px 5px #00000029;
+    border-radius: 10px;
+    padding: 16px;
+    margin-bottom: 36px;
+}
+
 .topic-title {
     font-family: 'Nunito', sans-serif;
     font-weight: 600;
     font-size: 13px;
     color: black;
-    margin: 48px 0 8px 0;
 }
 
 .topic-level {
@@ -124,6 +130,9 @@
     }
 
     .right-column-container {
-        margin: 60px 16px 0 16px;
+        box-shadow: 0px 0px 5px #00000029;
+        border-radius: 29px;
+        height: 100%;
+        margin-left: 20px;
     }
 }
