fix: fix bug where blank space would appear at the bottom

--- a/styles/stylesLeft.css
+++ b/styles/stylesLeft.css
@@ -133,6 +133,10 @@
         display: none;
     }
 
+    .fill-container {
+        height: 100%;
+    }
+
     .left-column-container {
         padding-top: 60px;
     }
