--- a/static/css/main.css
+++ b/static/css/main.css
@@ -67,7 +67,7 @@ body {
 
 nav a {
     text-decoration: none;
-    font-size: 20px;
+    font-size: 18px;
     color: white;
     font-weight: 300;
 }
@@ -86,21 +86,25 @@ nav a:hover {
     box-shadow: 0px 10px 20px #00000029;
     border-radius: 48px;
     opacity: 1;
-    width: 250px;
-    height: 50px;
+    width: 270px;
+    height: 65px;
     padding: 0.5em;
     text-align: center;
     display: inline-block;
     margin-top: 20px;
     animation-delay: 1.5s;
     text-decoration: none;
+    transition: 0.3s;
+    color: var(--main-blue);
+    font-weight: 400;
+    font-size: 1.05em;
+    font-family: 'Montserrat', sans-serif;
+    padding: 1rem;
 }
 
-.btnLarge p, .btnLarge p:hover{
-    font-weight: 200;
-    color: var(--main-blue);
-    font-size: 1em;
-    padding: 1rem;
+.btnLarge:hover{
+    background-color: #278CFF;
+    color: white;
 }
 
 .appPreview {
@@ -247,7 +251,147 @@ nav a:not(:first-child) {
     font-weight: 300;
 }
 
+/* ---------------------------------------------------- Features Section -------------------------------------------------- */
+.features-section {
+    height: auto;
+    width: 100vw;
+    padding-top: 10vh;
+    background-color: var(--main-blue);
+}
+
+.features-section .footer {
+    height: 10vh;
+    width: 100vw;
+    background-color: white;
+    position: relative;
+    bottom: 0;
+}
+
+.features-info {
+    position: relative;
+    bottom: -7vh;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    z-index: 2;
+    padding: 0 4rem 0 4rem;
+    height: auto;
+}
+
+.icon-wrapper {
+    width: 80px;
+    height: 80px;
+    background:white;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    box-shadow: 0px 10px 20px #00000029;
+}
+
+.icon {
+    height: auto;
+    width: 25px;
+}
+
+.feature-item {
+    display: grid;
+    grid-template-columns: 120px 240px;
+    padding-bottom: 120px;
+}
+
+.feature-item .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+}
+
+.feature-item .content h2 {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.feature-item .content p {
+    font-size: 16px;
+    font-weight: 200;
+}
+
+.features-info .left-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.features-info .right-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.features-info .img-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.features-info .img-column .header {
+    position: absolute;
+    top: 0;
+    margin-top: -100px;
+    display: flex;
+    justify-content: center;
+}
+
+.features-info .img-column h2 {
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+    position: absolute;
+    z-index: 2;
+}
+
+.features-info .img-column .rect {
+    width: 88px;
+    height: 12px;
+    background: black;
+    position: absolute;
+    margin-top: 12px;
+}
+
+.features-info .img-column .app-preview{
+    height: auto;
+    width: 80%;
+}
+
+
 /* Responsive --------------------------------------------------------------------------------------------------------*/
+/* FEATURES SECTION APP PREVIEW */
+@media (max-width: 1399px) {
+    .features-info {
+        grid-template-columns: auto;
+        grid-template-rows: auto auto auto;
+    }
+
+    .features-info .img-column .app-preview {
+        position: absolute;
+        height: 80vh;
+        width: auto;
+        left: 0vw;
+    }
+
+    .features-info .left-column {
+        justify-content: right;
+        align-items: flex-end;
+    }
+
+    .features-info .right-column {
+        justify-content: right;
+        align-items: flex-end;
+    }
+}
+
 @media (max-width:1100px) {
     body {
         width: 90vw;
@@ -285,8 +429,9 @@ nav a:not(:first-child) {
 
     .btnLarge {
         height: 50px;
-        width: 225px;
+        width: 250px;
         padding: 0rem;
+        font-size: 0.9em;
     }
 
     .btnLarge p {
@@ -305,7 +450,7 @@ nav a:not(:first-child) {
         grid-template-columns: 90%;
         grid-template-rows: 90% 90%;
         justify-content: center;
-        padding-top: 0em;
+        padding-top: 2em;
     }
 
     .about-img {
@@ -333,6 +478,56 @@ nav a:not(:first-child) {
 
     .about-info .content p {
         font-size: 1em;
+    }
+
+    /* -------------------------------------------------------FEATURES SECTION ---------------------------------------------------- */
+    
+    .features-section .footer {
+        display: none;
+    }
+
+    .features-info .img-column .app-preview {
+        display: none;
+    }
+
+    .features-info .left-column {
+        justify-content: center;
+        align-items: center;
+    }
+
+    .features-info .right-column {
+        justify-content: center;
+        align-items: center;
+    }
+
+    .features-info .icon-wrapper {
+        height: 60px;
+        width: 60px;
+    }
+
+    .features-info .icon-wrapper .icon {
+        width: 18px;
+    }
+    
+    .features-info .feature-item {
+        grid-template-columns: 75px 150px;
+
+    }
+
+    .features-info .left-column .content h2 {
+        font-size: 15px;
+    }
+
+    .features-info .left-column .content p {
+        font-size: 13px;
+    }
+
+    .features-info .right-column .content h2 {
+        font-size: 15px;
+    }
+
+    .features-info .right-column .content p {
+        font-size: 13px;
     }
 }
 
