--- a/styles/stylesLeft.css
+++ b/styles/stylesLeft.css
@@ -6,11 +6,13 @@
 
 .dashboard-container {
     position: relative;
-    left: 2.5%;
+    /* left: 2.5%;
     width: 95%;
-    height: 100%;
+    height: 100%; */
     background: #FAFAFA 0% 0% no-repeat padding-box;
-    border-radius: 36px;
+    /* border-radius: 36px; */
+    height: 100vh;
+    width: 100vw;
 }
 
 .center-align {
@@ -29,9 +31,6 @@
     background-color: #2A2A2A;
     height: 100%;
     width: 80%;
-    border-top-right-radius: 24px;
-    border-bottom-right-radius: 24px;
-    border-bottom-left-radius: 36px;
 }
 
 .company-font {
@@ -53,7 +52,7 @@
 }
 
 .category-icon-container img {
-    height: 15px;
+    height: 16px;
     width: 100%;
 }
 
@@ -69,7 +68,7 @@
 .category-text-container a {
     font-family: 'Nunito', sans-serif;
     font-weight: 600;
-    font-size: 15px;
+    font-size: 16px;
     color: #707070;
     white-space: nowrap;
     transition: .5s;
