--- a/styles/stylesRight.css
+++ b/styles/stylesRight.css
@@ -5,9 +5,13 @@
 
 .logout-font {
     font-family: 'Nunito', sans-serif;
-    font-weight: 700;
-    font-size: 15px;
+    font-weight: 600;
+    font-size: 13px;
     color: #707070;
+}
+
+.logout-font:hover {
+    font-weight: 800;
 }
 
 .logout-logo {
@@ -16,6 +20,13 @@
 
 .profile-container {
     text-align: center;
+}
+
+.profile-container .add-icon {
+    position: relative;
+    bottom: -65px;
+    right: 50px;
+
 }
 
 .profile-name-font {
@@ -54,7 +65,7 @@
 .topic-level {
     font-family: 'Nunito', sans-serif;
     font-weight: 600;
-    font-size: 10px;
+    font-size: 12px;
     color: #707070;
     margin: 0;
 }
@@ -62,9 +73,10 @@
 .completion-font {
     font-family: 'Nunito', sans-serif;
     font-weight: 600;
-    font-size: 10px;
+    font-size: 12px;
     color: #707070;
     margin: 0 0 20px 0;
+    padding-bottom: 2px;
 }
 
 @media only screen and (max-width: 1199px) {
@@ -87,7 +99,7 @@
         position: absolute;
         z-index: 1;
         background-color: #343A40;
-        border-bottom-right-radius: 36px;
+        padding: 1rem;
     }
 
     .logout-logo {
@@ -131,8 +143,8 @@
 
     .right-column-container {
         box-shadow: 0px 0px 5px #00000029;
-        border-radius: 29px;
         height: 100%;
         margin-left: 20px;
+        padding: 1rem;
     }
 }
