style/completed desktop view for contact-us and footer

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -522,6 +522,173 @@ nav a:not(:first-child) {
     bottom: 50vh;
     z-index: 0;
 }
+/* --------------------------------------------- CONTACT SECTION ---------------------------------- */
+.contact-section {
+    height: 80vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+}
+
+.contact-section .wrapper {
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-section .form {
+    width: 50vw;
+    height: 50vh;
+    display: grid;
+    grid-template-rows: auto auto auto;
+    grid-gap: 10px;
+}
+
+.contact-section .form .header {
+    display: grid;
+    grid-template-columns: auto auto;
+}
+
+.contact-section .form .header .company-name {
+    z-index: 2;
+    font-family: 'Nunito', sans-serif;
+    font-size: 30px;
+    font-weight: 500;
+    color: white;
+}
+
+.contact-section .form .header .description-grid {
+    z-index: 2;
+    text-align: right;
+}
+
+.contact-section .form .header .description-grid .description {
+    color: white;
+    font-size: 18px;
+    font-family: 'Nunito', sans-serif;
+    font-weight: 300;
+}
+
+.contact-section .input-fields {
+    display: grid;
+    grid-template-rows: auto auto auto;
+    z-index: 2;
+    grid-gap: 1rem;
+}
+
+.contact-section .input-fields .first-row {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 1rem;
+}
+
+.contact-section .input-fields .input-style {
+    border-radius: 6px;
+    padding-left: 1rem;
+    font-size: 16px;
+    font-weight: 300;
+    font-style: italic;
+    color: #7A7A7A;
+    height: 2.5rem;
+    font-family: 'Nunito', sans-serif;
+}
+
+.contact-section .input-fields .message {
+    height: 10rem;
+    padding-top: 1rem;
+    resize: none;
+}
+
+
+.contact-section .form .btn {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+.contact-section .form .btn .send-btn {
+    height: 70px;
+    width: 20vh;
+    background-image: linear-gradient(257deg, #0066FF 0%, #00BBFF 100%);
+    color: white;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+/* ------------------------------------------- FOOTER SECTION ----------------------------------------- */
+.footer-section {
+    height: 20vh;
+    width: 100vw;
+    background-color: white;
+    display: flex;
+    align-items: center;
+}
+
+.footer-section .wrapper {
+    display: grid;
+    grid-template-columns: 40% 60%;
+}
+
+.footer-section .left-section {
+    display: grid;
+    grid-template-rows: auto auto;
+}
+
+.footer-section .left-section .company-name {
+    font-family: 'Nunito', sans-serif;
+    font-size: 30px;
+    font-weight: 600;
+    color: var(--main-blue);
+}
+
+.footer-section .left-section .copyright {
+    font-size: 10px;
+    opacity: 0.8;
+}
+
+.footer-section .right-section {
+    display: grid;
+    grid-template-columns: auto auto;
+}
+
+.footer-section .right-section .navigation {
+    display: grid;
+    grid-template-columns: 100px 100px;
+    justify-content: flex-end;
+}
+
+.footer-section .right-section .navigation .nav-grid {
+    display: grid;
+    grid-template-rows: auto auto auto;
+}
+
+.footer-section .right-section .navigation .links {
+    font-size: 16px;
+    opacity: 0.8;
+    color: black;
+    text-decoration: none;
+}
+
+.footer-section .right-section .navigation .links:hover {
+    font-weight: 600;
+    color: var(--main-blue);
+}
+
+.footer-section .right-section .social-media {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.footer-section .right-section .social-media img {
+    padding-left: 2rem;
+}
+
 
 /* Responsive --------------------------------------------------------------------------------------------------------*/
 /* FEATURES SECTION APP PREVIEW */
