--- a/static/css/main.css
+++ b/static/css/main.css
@@ -22,6 +22,7 @@ body {
     background-color: var(--main-blue);
     height: 100vh;
     width: 100%;
+    scroll-behavior: smooth;
 }
 
 .hide {
@@ -948,7 +949,7 @@ nav a:not(:first-child) {
 
     /* ------------------------------------------ CONTACT SECTION ------------------------------ */
     .contact-section {
-        padding-top: 30vh;
+        padding-top: 45vh;
     }
 }
 
@@ -1023,7 +1024,7 @@ nav a:not(:first-child) {
     /* ------------------------------------- CONTACT SECTION ------------------------------ */
     .contact-section {
         height: 80vh;
-        padding-top: 0;
+        padding-top: 20vh;
     }
 
     .contact-section .form .input-fields .first-row {
@@ -1094,7 +1095,7 @@ nav a:not(:first-child) {
     /* ----------------------------------- CONTACT SECTION --------------------------------- */
     .contact-section {
          height: 150vh;
-         padding-top: 0;
+         padding-top: 50vh;
     }
 
     .contact-section .form .header {
