--- a/static/css/main.css
+++ b/static/css/main.css
@@ -736,6 +736,43 @@ nav a:not(:first-child) {
     padding-left: 2rem;
 }
 
+/* ------------------------------------------ POPUP ------------------------------ */
+.popup {
+    width: 180px;
+    height: 40px;
+    font-size: 14px;
+    background-color: #2ecc71;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 5px;
+    display: flex;
+    position: fixed;
+    border-radius: 5px;
+    right: 5px;
+    top: 5px;
+    z-index: 2;
+    color: white;
+    opacity: 0.4;
+    transition: 0.3s;
+}
+
+.popup:hover {
+    opacity: 1;
+    font-weight: 500;
+}
+
+.popup .arrow {
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 8px solid  #2ecc71;
+    position: absolute;
+    top: -10%;
+    /* right: 5px; */
+}
+
 
 /* Responsive --------------------------------------------------------------------------------------------------------*/
 /* FEATURES SECTION APP PREVIEW */
