--- a/styles/stylesLeft.css
+++ b/styles/stylesLeft.css
@@ -1,18 +1,16 @@
-.page-container {
-    background: transparent linear-gradient(241deg, #FF5757 0%, #BD63FF 100%) 0% 0% no-repeat padding-box;
-    position: absolute;
-    top: 0; right: 0; bottom: 0; left: 0;
+html, body {
+    min-height: 100%;
+    height: 100%;
+    overflow: auto;
+    position: relative;
 }
 
 .dashboard-container {
+    overflow: auto;
     position: relative;
-    /* left: 2.5%;
-    width: 95%;
-    height: 100%; */
     background: #FAFAFA 0% 0% no-repeat padding-box;
-    /* border-radius: 36px; */
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
 
 .center-align {
@@ -130,10 +128,6 @@
 
     .close-button {
         display: none;
-    }
-
-    .fill-container {
-        height: 100%;
     }
 
     .left-column-container {
