feat: change color of top navbar and right column

--- a/styles/stylesRight.css
+++ b/styles/stylesRight.css
@@ -96,7 +96,7 @@
         width: 280px;
         position: absolute;
         z-index: 1;
-        background-color: #343A40;
+        background-color: #2A2A2A;
         padding: 1rem;
     }
 
